fixed the overlap with box

--- a/src/start/start.css
+++ b/src/start/start.css
@@ -1,5 +1,5 @@
 *{font-family: Georgia, 'Times New Roman', Times, serif;}
-body {
+.body {
   display: flex;
   flex-direction: column;
   min-width: 375px;
@@ -25,7 +25,7 @@ nav {
 }
 
 
-main {
+.startMain {
   flex: 1 calc(100vh - 160px);
   display: flex;
   flex-direction: column;
@@ -52,7 +52,7 @@ footer {
 }
 
 
-.box{
+.boxStart{
     h1{
         text-align: center;
         margin-bottom: 20px;
